change default font

--- a/src/main/resources/resources/css/theme.css
+++ b/src/main/resources/resources/css/theme.css
@@ -4,7 +4,8 @@ html{
 
 body {
 	background: #efefef;
-	/*-webkit-font-smoothing: antialiased;*/
+	font: 300 1em/1.8 "Helvetica Neue",Helvetica, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans;
+	/*-webkit-font-smoothing: antialiased;
 	/*font-size: 1em;
 	line-height: 1.8;
 	font-weight: 300;*/
