--- a/src/main/resources/templates/layout/navbar.jade
+++ b/src/main/resources/templates/layout/navbar.jade
@@ -6,5 +6,6 @@ nav.navbar.navbar-bright
         li.active
           a(href="/") Home
         li: a(href="/posts/archive") Archive
+        li: a(href="/tags") Tags
         li: a(href="/about") About
     
