--- a/src/main/resources/templates/layout/navbar.jade
+++ b/src/main/resources/templates/layout/navbar.jade
@@ -1,11 +1,11 @@
 nav.navbar.navbar-bright
   .container
     .navbar-header
+      a.navbar-brand(href="/") Raysmond
     div#navbar
-      ul.nav.navbar-nav
-        li.active
-          a(href="/") Home
-        li: a(href="/posts/archive") Archive
+      ul.nav.navbar-nav.navbar-right
+        li: a(href="/posts/archive") Blog
         li: a(href="/tags") Tags
+        li: a(href="/posts/projects") Projects
         li: a(href="/about") About
     
