--- a/src/main/resources/templates/layout/head.jade
+++ b/src/main/resources/templates/layout/head.jade
@@ -13,7 +13,7 @@ title
 link(rel='stylesheet', type='text/css', href='/webjars/bootstrap/3.3.5/css/bootstrap.min.css')
 link(rel="stylesheet", type='text/css', href="/vendors/pygments/github.css")
 link(rel="stylesheet", type='text/css', href="/vendors/typo.css-2.1.2/typo.min.css")
-link(rel="stylesheet", type='text/css', href="/css/theme.css")
+link(rel="stylesheet", type='text/css', href="/css/theme-light.css")
 
 
 script(src="/webjars/jquery/2.1.4/jquery.min.js")
