project upgrades: 1. move web static resources to webapp dir 2. use spring logging (logpack), with lombok 3. replace all webjars with bower

--- a/src/main/resources/templates/admin/layout/head.jade
+++ b/src/main/resources/templates/admin/layout/head.jade
@@ -6,18 +6,19 @@ meta(name="description", content="A simple blog demo with Spring MVC.")
 meta(name="author", content="Raysmond")
 title #{App.getSiteName()}
 
-link(rel='stylesheet', type='text/css', href='/webjars/bootstrap/3.3.5/css/bootstrap.min.css')
-link(rel='stylesheet', type='text/css', href='/webjars/font-awesome/4.3.0-3/css/font-awesome.min.css')
+link(rel='stylesheet', type='text/css', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
+link(rel='stylesheet', type='text/css', href='/bower_components/fontawesome/css/font-awesome.min.css')
 link(rel="stylesheet", type='text/css', href="/css/admin/admin.css")
 link(rel="stylesheet", href="/bower_components/simditor/styles/simditor.css")
 link(rel="stylesheet", href="/bower_components/simditor-markdown/styles/simditor-markdown.css")
 
-script(src="/webjars/jquery/2.1.4/jquery.min.js")
-script(src="/webjars/bootstrap/3.3.5/js/bootstrap.min.js")
-script(src="/vendors/bootstrap-paginator-1.0.2/js/bootstrap-paginator.min.js")
+script(src="/bower_components/jquery/dist/jquery.min.js")
+script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
 script(src="/bower_components/marked/marked.min.js")
 script(src="/bower_components/simple-module/lib/module.js")
 script(src="/bower_components/simple-hotkeys/lib/hotkeys.js")
 script(src="/bower_components/to-markdown/dist/to-markdown.js")
 script(src="/bower_components/simditor/lib/simditor.js")
 script(src="/bower_components/simditor-markdown/lib/simditor-markdown.js")
+script(src="/vendors/bootstrap-paginator-1.0.2/js/bootstrap-paginator.min.js")
+
