--- a/src/main/resources/templates/admin/posts/new.jade
+++ b/src/main/resources/templates/admin/posts/new.jade
@@ -1,9 +1,9 @@
 extends ../layout/admin
 
 block head
-  script(src="/webjars/ace/1.2.0/src-min/ace.js")
-  script(src="/webjars/ace/1.2.0/src-min/theme-github.js")
-  script(src="/webjars/ace/1.2.0/src-min/mode-markdown.js")
+  script(src="/bower_components/ace-builds/src-min/ace.js")
+  script(src="/bower_components/ace-builds/src-min/theme-github.js")
+  script(src="/bower_components/ace-builds/src-min/mode-markdown.js")
 
 block content
   h1 New Post
