--- a/src/main/resources/templates/layout/head.jade
+++ b/src/main/resources/templates/layout/head.jade
@@ -1,19 +1,16 @@
 meta(charset="utf-8")
 meta(http-equiv="X-UA-Compatible", content="IE=edge")
 meta(name="viewport", content="width=device-width, initial-scale=1")
-
 meta(name="description", content="#{App.getSiteSlogan()}")
-  
 meta(name="author", content="Raysmond")
 
 title 
   block title 
     = App.getSiteName()
 
-link(rel='stylesheet', type='text/css', href='/webjars/bootstrap/3.3.5/css/bootstrap.min.css')
+link(rel='stylesheet', type='text/css', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
 link(rel="stylesheet", type='text/css', href="/vendors/pygments/github.css")
 link(rel="stylesheet", type='text/css', href="/vendors/typo.css-2.1.2/typo.min.css")
 link(rel="stylesheet", type='text/css', href="/css/theme-light.css")
 
-
-script(src="/webjars/jquery/2.1.4/jquery.min.js")
+script(src="/bower_components/jquery/dist/jquery.min.js")
