--- a/src/main/resources/templates/admin/layout/head.jade
+++ b/src/main/resources/templates/admin/layout/head.jade
@@ -6,8 +6,8 @@ meta(name="description", content="A simple blog demo with Spring MVC.")
 meta(name="author", content="Raysmond")
 title #{App.getSiteName()}
 
-link(rel='stylesheet', type='text/css', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
-link(rel='stylesheet', type='text/css', href='/bower_components/fontawesome/css/font-awesome.min.css')
+link(rel='stylesheet', type='text/css', href="/bower_components/bootstrap/dist/css/bootstrap.min.css")
+link(rel='stylesheet', type='text/css', href="/bower_components/fontawesome/css/font-awesome.min.css")
 link(rel="stylesheet", type='text/css', href="/css/admin/admin.css")
 link(rel="stylesheet", href="/bower_components/simditor/styles/simditor.css")
 link(rel="stylesheet", href="/bower_components/simditor-markdown/styles/simditor-markdown.css")
