--- a/src/main/resources/templates/layout/footer.jade
+++ b/src/main/resources/templates/layout/footer.jade
@@ -10,3 +10,4 @@
         if viewHelper != null
           span  #{viewHelper.getResponseTime()}ms
        
+script(src="/bower_components/jquery/dist/jquery.min.js")
