--- a/src/main/resources/templates/layout/head.jade
+++ b/src/main/resources/templates/layout/head.jade
@@ -8,9 +8,8 @@ title
   block title 
     = App.getSiteName()
 
-link(rel='stylesheet', type='text/css', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
+link(rel='stylesheet', type='text/css', href="/bower_components/bootstrap/dist/css/bootstrap.min.css")
 link(rel="stylesheet", type='text/css', href="/vendors/pygments/github.css")
 link(rel="stylesheet", type='text/css', href="/vendors/typo.css-2.1.2/typo.min.css")
 link(rel="stylesheet", type='text/css', href="/css/theme-light.css")
 
-script(src="/bower_components/jquery/dist/jquery.min.js")
