Update description and theme

--- a/src/main/resources/templates/home/index.jade
+++ b/src/main/resources/templates/home/index.jade
@@ -6,7 +6,10 @@ block page_title
   h1 #{App.getSiteName()}
   p.meta #{App.getSiteSlogan()}
 
-  p Hi, there. I'm Raysmond, a postgraduate of Computer Science in Fudan University from Shanghai, China. I love developing software and web applications and I blog about them.
+  p
+    | SpringBlog is a very simple and clean-design blog system implemented with Spring Boot. You can find the sourcecode
+    | of the project at <a href="https://github.com/Raysmond/SpringBlog">Github</a>.
+    | <br/>I hope you find it helpful.
 
 block title 
   = App.getSiteName()
