--- a/src/main/resources/templates/admin/posts/new.jade
+++ b/src/main/resources/templates/admin/posts/new.jade
@@ -1,65 +1,82 @@
 extends ../layout/admin
 
 block head
-  script(src="/bower_components/ace-builds/src-min/ace.js")
-  script(src="/bower_components/ace-builds/src-min/theme-github.js")
-  script(src="/bower_components/ace-builds/src-min/mode-markdown.js")
+    script(src="/bower_components/ace-builds/src-min/ace.js")
+    script(src="/bower_components/ace-builds/src-min/theme-github.js")
+    script(src="/bower_components/ace-builds/src-min/mode-markdown.js")
 
 block content
-  h1 New Post
-  hr
+    h1 New Post
+    hr
 
-  form.post-form(method="post",action="/admin/posts")
-    .item-row
-      input(type="hidden", name='_csrf', value='#{_csrf.token}')
-    .item-row
-      input.form-control(type="text", name="title", value='#{postForm.getTitle()}')
-    .item-row
-      textarea.form-control#content(name="content", style="display:none;")
-        = postForm.getContent()
-      div#content-editor
-        #{postForm.getContent()}
-    .item-row
-      hr
-      .row
-        .col-sm-3
-          span Format
-          select.form-control(name="postFormat")
-            for format in postFormats
-              if format != postForm.getPostFormat()
-                option(value="#{format.getId()}") #{format.getDisplayName()}
-              else 
-                option(value="#{format.getId()}", selected="selected") #{format.getDisplayName()}
-        .col-sm-3
-          span Status
-          select.form-control(name="postStatus")
-            for status in postStatus
-              if status != postForm.getPostStatus()
-                option(value="#{status.getId()}") #{status.getName()}
-              else 
-                option(value="#{status.getId()}", selected="selected") #{status.getName()}
-        
-        .col-sm-3
-          span Permalink
-          input.form-control(name="permalink", value="#{postForm.getPermalink()}")
-        
-        .col-sm-3
-          span Tags
-          input.form-control(name="postTags", value="#{postForm.getPostTags()}")
-    .item-row
-      hr
-      button.btn.btn-primary.btn-block(type="submit") Create new post
+    form.post-form(method="post",action="/admin/posts")
+        .item-row
+            input(type="hidden", name='_csrf', value='#{_csrf.token}')
+        .form-group
+            label 标题
+            input.form-control(type="text", name="title", value='#{postForm.getTitle()}')
 
-  script
-    var editor = ace.edit("content-editor");
-    editor.setTheme("ace/theme/github");
-     
-    var MarkdownMode = ace.require("ace/mode/markdown").Mode;
-    editor.getSession().setMode(new MarkdownMode());
-    
-    editor.getSession().setUseWrapMode(true);
-    
-    $("form").submit(function(){
-        $("#content").val(editor.getValue());
-        return true;
-    });
+        .form-group
+            label 正文
+            textarea.form-control#content(name="content", style="display:none;")
+                = postForm.getContent()
+            div#content-editor
+                #{postForm.getContent()}
+
+        .form-group
+            label 摘要
+            textarea.form-control#summary(name="summary", style="display:none;")
+                = postForm.getSummary()
+            div#summary-editor
+                #{postForm.getSummary()}
+        .item-row
+            hr
+            .row
+                .col-sm-3
+                    span Format
+                    select.form-control(name="postFormat")
+                        for format in postFormats
+                            if format != postForm.getPostFormat()
+                                option(value="#{format.getId()}") #{format.getDisplayName()}
+                            else
+                                option(value="#{format.getId()}", selected="selected") #{format.getDisplayName()}
+                .col-sm-3
+                    span Status
+                    select.form-control(name="postStatus")
+                        for status in postStatus
+                            if status != postForm.getPostStatus()
+                                option(value="#{status.getId()}") #{status.getName()}
+                            else
+                                option(value="#{status.getId()}", selected="selected") #{status.getName()}
+
+                .col-sm-3
+                    span Permalink
+                    input.form-control(name="permalink", value="#{postForm.getPermalink()}")
+
+                .col-sm-3
+                    span Tags
+                    input.form-control(name="postTags", value="#{postForm.getPostTags()}")
+        .item-row
+            hr
+            button.btn.btn-primary.btn-block(type="submit") Create new post
+
+    script
+        var editor = ace.edit("content-editor");
+        var summaryEditor = ace.edit("summary-editor");
+
+        editor.setTheme("ace/theme/github");
+        summaryEditor.setTheme("ace/theme/github");
+
+        var MarkdownMode = ace.require("ace/mode/markdown").Mode;
+        editor.getSession().setMode(new MarkdownMode());
+        editor.getSession().setUseWrapMode(true);
+
+        summaryEditor.getSession().setMode(new MarkdownMode());
+        summaryEditor.getSession().setUseWrapMode(true);
+
+        $("form").submit(function(){
+            $("#content").val(editor.getValue());
+            $("#summary").val(summaryEditor.getValue());
+            return true;
+        });
+
