--- a/src/main/resources/templates/layout/bootstrap4.html
+++ b/src/main/resources/templates/layout/bootstrap4.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+<html xmlns:th="http://www.thymeleaf.org"
       class="no-js" lang="zh-cn" dir="ltr">
 <head>
     <meta charset="UTF-8">
