--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -6,13 +6,23 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 class="page-title text-center py-3">Login</h1>
+    <h1 class="page-title text-center py-3">登录</h1>
 
     <div class="mt-3">
         <form th:action="@{/authenticate}" method="post" class="mx-auto w-50">
-            <input class="form-control" placeholder="Username" name="username"/>
-            <input class="form-control" placeholder="password" name="password" type="password"/>
-            <button class="btn btn-primary" type="submit">Login</button>
+            <div class="form-group">
+                <label for="exampleInputEmail1">用户名</label>
+                <input type="text" name="username" class="form-control" id="exampleInputEmail1" placeholder="请输入用户名">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">密码</label>
+                <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="请输入密码">
+            </div>
+            <div class="form-check">
+                <input type="checkbox" name="rememberMe" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">记住我</label>
+            </div>
+            <button type="submit" class="btn btn-primary mt-2">登录</button>
         </form>
     </div>
 </div>
